bk_ida/gccida/g1/swap_rtx_condition_1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition_1/src/reg-stack.c:1682:36: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
*( _WORD *)pat = swap_condition( ( rtx_code)v1); 
                                   ^~~~~~~~
                                   rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition_1/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition_1/src/reg-stack.c:1682:45: error: expected ')'
*( _WORD *)pat = swap_condition( ( rtx_code)v1); 
                                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition_1/src/reg-stack.c:1682:32: note: to match this '('
*( _WORD *)pat = swap_condition( ( rtx_code)v1); 
                               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/swap_rtx_condition_1/src/obj/reg-stack.o] Error 1
